Add Event, Category, and EventParticipation entity models

--- a/LetsMeetApp/LetsMeetApp.Web/appsettings.json
+++ b/LetsMeetApp/LetsMeetApp.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LetsMeet-ac3555be-f2a9-4a58-b2dd-1fd7111290aa;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=.;Database=RecipeSharingPlatform2026;User Id=sa;Password=r3F4iJbYas&#aRj^bmjj;TrustServerCertificate=true;",
     "LetsMeetDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=LetsMeetApp.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
