Configure EF Core models with Fluent API, seed demo data including admin, enable auto migrations, refactor entities, and add ValidationConstants

--- a/LetsMeetApp/LetsMeetApp.Web/appsettings.json
+++ b/LetsMeetApp/LetsMeetApp.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=RecipeSharingPlatform2026;User Id=sa;Password=r3F4iJbYas&#aRj^bmjj;TrustServerCertificate=true;",
+    "DefaultConnection": "Server=.;Database=LetsMeetApp;User Id=sa;Password=r3F4iJbYas&#aRj^bmjj;TrustServerCertificate=true;",
     "LetsMeetDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=LetsMeetApp.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
